Добавил третью практическую работу, а также отчет к ней в мкдокс

--- a/students/K33391/laboratory_works/Барышников_Владимир/mkdocs.yml
+++ b/students/K33391/laboratory_works/Барышников_Владимир/mkdocs.yml
@@ -47,4 +47,7 @@ nav:
       - Представления: lab_2_views.md
       - Маршрутизация: lab_2_urls.md
       - Шаблоны: lab_2_templates.md
+  - "Лабораторная №3":
+      - Практика_3.1: practice_3.md
+
 
