--- a/students/K33391/laboratory_works/Барышников_Владимир/mkdocs.yml
+++ b/students/K33391/laboratory_works/Барышников_Владимир/mkdocs.yml
@@ -49,5 +49,11 @@ nav:
       - Шаблоны: lab_2_templates.md
   - "Лабораторная №3":
       - Практика_3.1: practice_3.md
+      - Модели: lab_3_models.md
+      - Админ: lab_3_admin.md
+      - Сериализаторы: lab_3_serilizators.md
+      - Представления: lab_3_views.md
+      - Маршрутизация: lab_3_urls.md
+
 
 
